update: controller and route on wallet-crypto
